# WxExperiments

./: .gitmodules  CMakeLists.txt  CMakeLists_superpattern.txt  README.md
src/: CMakeLists.txt
wxHello/: CMakeLists.txt
wxHello/src/: hello.cpp
wxLearn/: CMakeLists.txt
wxLearn/src/: learn.cpp
